# geometry3

./: README.md  pyproject.toml
geometry3/: __init__.py  plane.py
tests/: plane_params_test.py  plane_test.py
