[tool.poetry]
name = "geometry3"
version = "0.1.0"
description = "A Python library for 3D geometry calculations"
authors = ["Yevhenii Achating"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.20"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"